syntax = "proto3";
package grpc;
option go_package = ".;grpc";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
}
